--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 .footer{
-    position:absolute;
+    position:relative;
     bottom:0;
     width:100%;
     height:60px;
@@ -12,4 +12,5 @@
 }
 .btn-ocean{
     background-color:#0067b8;
+
 }
