--- a/style.css
+++ b/style.css
@@ -7,11 +7,6 @@
     background-color:#f5f5f5
 }
 
-.fin-cards {
-    display: flex;
-    flex-wrap: wrap;
-}
-
 .vertical-center{
     display:flex;
     align-items:center
@@ -19,4 +14,12 @@
 .btn-ocean{
     background-color:#0067b8;
 
+}
+
+#incorrectLabel {
+    color: red;
+}
+
+#correctLabel {
+    color: green;
 }
