--- a/ff-app/src/app/front.component.html
+++ b/ff-app/src/app/front.component.html
@@ -1,13 +1,13 @@
 <div class="container-fluid">
     <div class="d-flex justify-content-center row m-1">
         <div *ngFor="let person of people" class="card bg-light m-3 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            <img class="card-img-top" src="{{person.img_src}}">
+            <img class="card-img-top" src="{{person.Picture}">
             <div class="card-body">
-            <h2 class="card-title">{{person.name}}</h5>
-            <h4 class="card-title">{{person.market}}, {{person.cohort}}</h6>
-            <p class="card-text"><strong>Fun Fact:</strong> {{person.fun_fact}}</p>
-            <p class="card-text"><strong>Favorite Quote:</strong>{{person.quote}}</p>              </p>
-            <h5 class="card-text">{{person.hometown}}, {{person.state}} </h6>
+            <h2 class="card-title">{{person.Name}}</h5>
+            <h4 class="card-title">{{person.Market}}, {{person.Cohort}}</h6>
+            <p class="card-text"><strong>Fun Fact:</strong> {{person["Fun Fact"]}}</p>
+            <p class="card-text"><strong>Favorite Quote:</strong>{{person["Favorite Quote"]}}</p>              </p>
+            <h5 class="card-text">{{person.Hometown}}</h6>
             </div>
         </div>
     </div>      
