--- a/ff-app/src/app/quiz_page.component.html
+++ b/ff-app/src/app/quiz_page.component.html
@@ -1,5 +1,6 @@
 <main role="main" class="container-fluid mt-4 mb-3 flex-fill">
     <div class="row">
+        <button (click)='selectRandomPerson()'>Select Person</button>
 
         <div class="col-lg-6 vertical-center d-flex justify-content-center" id="profile_face">
             <img src="alex_rogers.png"  class="img-fluid">
