--- a/ff-app/src/app/app.component.html
+++ b/ff-app/src/app/app.component.html
@@ -1,5 +1,23 @@
+<header>
+    <nav class="navbar navbar-expand navbar-dark" style="background-color:#0067b8">
+        <a class="navbar-brand" href="#">Fellow Fins</a>
+        
+        <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>-->
+      
+        <div id="navbarSupportedContent" class="collapse navbar-collapse">
+          <ul class="navbar-nav">
+            <li class="nav-item active">
+              <button (click)="initQuiz()" class="nav-link">Quiz Now! <span class="sr-only">(current)</span></button>
+            </li>
+          </ul>
+        </div>
+      </nav>
+</header>
+<main role="main" class="container mt-4 mb-3">
 <div class="container-fluid">
-    <div class="d-flex justify-content-center row m-1">
+    <div *ngIf="showFront" class="d-flex justify-content-center row m-1">
         <div *ngFor="let person of people" class="card bg-light m-3 col-lg-3 col-md-4 col-sm-6 col-xs-12">
             <img class="card-img-top" src="./assets/fins_pics/{{person.Picture_Local}}">
             <div class="card-body">
@@ -10,5 +28,36 @@
             <h5 class="card-text">{{person.Hometown}}</h5>
             </div>
         </div>
-    </div>      
+    </div>    
 </div>
+<div *ngIf="!showFront" class="row">
+    <button (click)='selectRandomPerson()'>Select Person</button>
+
+    <div class="col-lg-6 vertical-center d-flex justify-content-center" id="profile_face">
+        <img src="alex_rogers.png"  class="img-fluid">
+    </div>
+    
+    <div class="col-lg-6 vertical-center d-flex justify-content-center" id="multiple_choice">
+        <div class="btn-group-vertical mt-3">
+            <button type="button" class="btn btn-ocean btn-primary m-2" data-toggle="button" aria-pressed="false" autocomplete="off">
+                    Alex Rogers
+            </button>
+            <button type="button" class="btn btn-ocean btn-primary m-2" data-toggle="button" aria-pressed="false" autocomplete="off">
+                    Stephen Godderidge
+            </button>
+            <button type="button" class="btn btn-ocean btn-primary m-2" data-toggle="button" aria-pressed="false" autocomplete="off">
+                    Jake Altabef
+            </button>
+            <button type="button" class="btn btn-ocean btn-primary m-2" data-toggle="button" aria-pressed="false" autocomplete="off">
+                    Katie Lutz
+            </button>
+        </div>
+    </div>
+    
+</div>
+</main>
+<footer class="footer">
+    <div class="container">
+        <span class="text-muted">Copyright Pariveda Solutions 2019. All rights reserved.</span>
+    </div>
+</footer>
