--- a/ff-app/src/app/app.component.html
+++ b/ff-app/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
     <nav class="navbar navbar-expand navbar-dark" style="background-color:#0067b8">
-        <a class="navbar-brand" href="#">Fellow Fins</a>
+        <a class="navbar-brand" (click)="hideQuiz()">Fellow Fins</a>
         
         <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -9,7 +9,7 @@
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <button (click)="initQuiz()" class="nav-link">Quiz Now! <span class="sr-only">(current)</span></button>
+              <button (click)="initQuiz()" class="btn-ocean btn-primary" >Quiz Now! <span class="sr-only">(current)</span></button>
             </li>
           </ul>
         </div>
