put everything into app.component

--- a/ff-app/src/app/app.component.html
+++ b/ff-app/src/app/app.component.html
@@ -31,7 +31,7 @@
     </div>    
 </div>
 <div *ngIf="!showFront" class="row">
-    <button (click)='selectRandomPerson()'>Select Person</button>
+    <button (click)='getFin()'>Select Person</button>
 
     <div class="col-lg-6 vertical-center d-flex justify-content-center" id="profile_face">
         <img src="alex_rogers.png"  class="img-fluid">
