--- a/ff-app/src/styles.css
+++ b/ff-app/src/styles.css
@@ -13,7 +13,11 @@
 }
 .btn-ocean{
     background-color:#0067b8;
+}
 
+.btn-ocean:hover, .navbar-brand:hover{
+    background-color: #0067b8;
+    cursor: pointer;
 }
 
 #incorrectLabel {
