--- a/ff-app/src/app/app.component.html
+++ b/ff-app/src/app/app.component.html
@@ -1,6 +1,6 @@
 <header>
     <nav class="navbar navbar-expand navbar-dark" style="background-color:#0067b8">
-        <a class="navbar-brand" (click)="hideQuiz()">Fellow Fins</a>
+        <div class="navbar-brand" (click)="hideQuiz()">Fellow Fins</div>
         
         <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -9,7 +9,7 @@
         <div id="navbarSupportedContent" class="collapse navbar-collapse">
           <ul class="navbar-nav">
             <li class="nav-item active">
-              <button (click)="initQuiz()" class="btn-ocean btn-primary" >Quiz Now! <span class="sr-only">(current)</span></button>
+              <div (click)="initQuiz()" class="btn-ocean btn-primary" >Quiz Now! <span class="sr-only">(current)</span></div>
             </li>
           </ul>
         </div>
@@ -30,33 +30,43 @@
         </div>
     </div>    
 </div>
-<div *ngIf="!showFront" class="row">
-<<<<<<< HEAD
-=======
-    <button (click)='getFin()'>Select Person</button>
-
->>>>>>> 162b7440de64f644560ae0f3439f2890c6cf45a6
+<div *ngIf="!showFront&&!quizEnd" class="row">
     <div class="col-lg-6 vertical-center d-flex justify-content-center" id="profile_face">
-        <img src="alex_rogers.png"  class="img-fluid">
+        <img src="./assets/fins_pics/{{correctFinPic}}"  class="img-fluid" style="height:500px;width:500px">
     </div>
     
     <div class="col-lg-6 vertical-center d-flex justify-content-center" id="multiple_choice">
         <div class="btn-group-vertical mt-3">
-            <button type="button" class="btn btn-ocean btn-primary m-2" data-toggle="button" aria-pressed="false" autocomplete="off">
-                    Alex Rogers
+            <button type="button" (click)="btnPressed(finArray[0])"class="btn btn-ocean btn-primary m-2" data-toggle="button" aria-pressed="false" autocomplete="off">
+                    {{finArray[0]}}
             </button>
-            <button type="button" class="btn btn-ocean btn-primary m-2" data-toggle="button" aria-pressed="false" autocomplete="off">
-                    Stephen Godderidge
+            <button type="button" (click)="btnPressed(finArray[1])" class="btn btn-ocean btn-primary m-2" data-toggle="button" aria-pressed="false" autocomplete="off">
+                    {{finArray[1]}}
             </button>
-            <button type="button" class="btn btn-ocean btn-primary m-2" data-toggle="button" aria-pressed="false" autocomplete="off">
-                    Jake Altabef
+            <button type="button" (click)="btnPressed(finArray[2])" class="btn btn-ocean btn-primary m-2" data-toggle="button" aria-pressed="false" autocomplete="off">
+                    {{finArray[2]}}
             </button>
-            <button type="button" class="btn btn-ocean btn-primary m-2" data-toggle="button" aria-pressed="false" autocomplete="off">
-                    Katie Lutz
+            <button type="button" (click)="btnPressed(finArray[3])" class="btn btn-ocean btn-primary m-2" data-toggle="button" aria-pressed="false" autocomplete="off">
+                    {{finArray[3]}}
             </button>
         </div>
     </div>
     
+</div>
+<div *ngIf="quizEnd">
+<div class="row">
+    <div class="d-flex justify-content-center flex-grow-1 col my-5">
+        <h1 class="large-txt">You Got {{score}}/55 Correct!</h1>
+    </div>
+</div>
+<div class="row"> 
+            <div class="col-6 d-flex justify-content-center">
+                <button (click)="initQuiz()" class="btn btn-primary btn-ocean" type="submit">Try Again</button>
+            </div>
+            <div class="col-6 d-flex justify-content-center">
+                <button (click)="hideQuiz()" class="btn btn-primary btn-ocean" type="submit">Home</button>
+            </div>
+</div>
 </div>
 </main>
 <footer class="footer">
