--- a/ff-app/src/app/app.component.css
+++ b/ff-app/src/app/app.component.css
@@ -1,5 +1,5 @@
 .footer{
-    position:relative;
+    position:absolute;
     bottom:0;
     width:100%;
     height:60px;
@@ -36,3 +36,6 @@
 .large-txt{
     font-size:64px;
 }
+
+
+
