--- a/ff-app/src/app/app.component.html
+++ b/ff-app/src/app/app.component.html
@@ -19,7 +19,7 @@
 
     <div *ngIf="showFront" class="d-flex justify-content-center row m-1">
         <div *ngFor="let person of people" class="card bg-light m-3 col-lg-3 col-md-4 col-sm-6 col-xs-12">
-            <img class="card-img-top" src="./assets/fins_pics/{{person.Picture_Local}}">
+            <img class="card-img-top" style="width: 84%; margin-left: 8%; margin-top: 2%;" src="./assets/fins_pics/{{person.Picture_Local}}">
             <div class="card-body">
             <h2 class="card-title">{{person.Name}}</h2>
             <h4 class="card-title">{{person.Market}}, {{person.Cohort}}</h4>
