--- a/ff-app/src/app/quiz_page.component.html
+++ b/ff-app/src/app/quiz_page.component.html
@@ -17,4 +17,6 @@
             
         </div>
     </div>
+    <!--<ngbd-progressbar-labels [counter]="counter" [numFins]="numFins"></ngbd-progressbar-labels>-->
+
 </div>
